# CEnginePlayGround

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md
cell/: Cell.vcxproj
cell/animation/: Animation.h  AnimationClip.cpp  AnimationClip.h  AnimationController.cpp  AnimationController.h  AnimationLoader.cpp  AnimationLoader.h  AnimationState.cpp  AnimationState.h
cell/camera/: camera.cpp  camera.h  camera_frustum.cpp  camera_frustum.h  fly_camera.cpp  fly_camera.h
cell/common/: FileManager.h
cell/components/: Animator.cpp  Animator.h  Component.h  MeshRender.cpp  MeshRender.h  SkinningMeshRender.cpp  SkinningMeshRender.h
cell/lighting/: directional_light.h  point_light.h
cell/math/: cmath.h  common.h
cell/math/geometry/: plane.cpp  plane.h
cell/math/linear_algebra/: vmath.cpp  vmath.h
cell/math/trigonometry/: polar.cpp  polar.h  spherical.cpp  spherical.h
cell/mesh/: circle.cpp  cube.cpp  mesh.cpp  mesh.h  plane.cpp  sphere.cpp  torus.cpp
cell/renderer/: MaterialLibrary.cpp  PBR.cpp  PBR.h  PostProcessor.cpp  PostProcessor.h  command_buffer.cpp  command_buffer.h  pbr_capture.h  render_command.h  renderer.cpp  renderer.h
cell/resources/: mesh_loader.cpp  mesh_loader.h  resources.cpp  resources.h  texture_loader.cpp
cell/scene/: background.cpp  background.h  scene.cpp  scene.h  scene_node.cpp  scene_node.h
cell/shading/: material.cpp  material.h  shader.cpp  shader.h  shaderUniform.h  shading_types.h  texture.h
winSample/: CMakeLists.txt
winSample/resources/meshes/boy/: boy.FBX  boy1.fbx  boy@anim_01.FBX  boy@anim_02.FBX  boy@anim_03.FBX  boy@walk_turn.FBX  boy_ori.FBX
winSample/resources/meshes/carman/: Jump_Up.FBX
winSample/resources/meshes/sponza/: Tpose_head.FBX
winSample/resources/meshes/unityChan/: unitychan.material
winSample/resources/shaders/: capture.vs  forward_render.fs
winSample/resources/shaders/custom/: plasma_orb.fs
winSample/resources/shaders/deferred/: ambient.fs  ambient_irradience.fs  directional.fs  g_buffer.fs  g_buffer.vs  g_buffer_skining.vs  point.fs
winSample/resources/shaders/pbr/: integrate_brdf.fs  irradiance_capture.fs  prefilter_capture.fs
winSample/samples/: animation_sample.cpp  frameGraph_sample.cpp  rendering_sample.cpp
winSample/scenes/: base_sample.cpp  base_sample.hpp
